# excellize-bing-ads

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml  main.yaml
bing/: pipeline_service.py  repo.py  test_pipeline_service.py
bing/pipeline/: __init__.py  campaign_performance_report.py  interface.py
db/: bigquery.py
